--- a/templates/top-sellers.html
+++ b/templates/top-sellers.html
@@ -9,7 +9,7 @@
 <body>
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
-      <a class="nav-link"  href="/">
+      <a class="nav-link"  href="{% url 'main-page' %}">
         <span style="font-weight: bold;">Главная</span>
       </a>
     </li>
@@ -18,22 +18,22 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'advertisement-post' %}">
+      <a class="nav-link" href="advertisement-post.html">
         <span style="font-weight: bold;">Разместить объявление</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'register' %}">
+      <a class="nav-link" href="'register.html'">
         <span style="font-weight: bold;">Регистрация</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'login' %}">
+      <a class="nav-link" href="login.html">
         <span style="font-weight: bold;">Войти</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'profile' %}">
+      <a class="nav-link" href="profile.html">
         <span style="font-weight: bold;">Профиль</span>
       </a>
     </li>
